feat: add Swagger documentation for detail user
